--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "htt`://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>(*￣▽￣)丽云小吃货(≧︶≦*)</title>     
+    <title>(*￣▽￣)小鱼鱼七夕快乐~(≧︶≦*)</title>     
     <link type="text/css" rel="stylesheet" href="./css/default.css">
     <script type="text/javascript" src="./css/jquery.min.js"></script>
     <script type="text/javascript" src="./css/jscex.min.js"></script>
@@ -26,13 +26,13 @@
                 <div id="text">
               <div id="code">
             <font color="#FF0000">    
-<span class="say"><h1>我希望有个如你一般的人。</h1></span><br><br>
-<span class="say">我希望有个如你一般的人。</span><br> <br>    
-<span class="say">如这山间清晨一般明亮清爽，</span><br><br>
-<span class="say">如奔赴古城道路上阳光一般的人，</span><br><br>
-<span class="say">温暖而不炙热，覆盖我所有肌肤。</span><br><br>
-<span class="say">由起点到夜晚，由山野到书房，一切问题的答案都很简单。</span><br><br>
-<span class="say">我希望有个如你一般的人，贯彻未来，数遍生命的公路牌。</span><br><br>
+<span class="say"><h1>---愿有岁月可回首, 且以深情共白头---</h1></span><br><br>
+<span class="say">我希望有个如你一般的人</span><br> <br>    
+<span class="say">如这山间清晨一般明亮清爽</span><br><br>
+<span class="say">如奔赴古城道路上阳光一般的人</span><br><br>
+<span class="say">温暖而不炙热，覆盖我所有肌肤</span><br><br>
+<span class="say">由起点到夜晚, 由山野到书房, 一切问题的答案都很简单.</span><br><br>
+<span class="say">我希望有个如你一般的人, 贯彻未来, 数遍生命的公路牌.</span><br><br>
 <span class="say"><span class="space"></span> -- 刘员京--</span><br>
 <span class="say"><h1>生日快乐!</h1></span><br>
         </font>
