--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div id="text">
               <div id="code">
             <font color="#FF0000">    
-<span class="say"><h1>---愿有岁月可回首, 且以深情共白头---</h1></span><br><br>
+<span class="say"><h1>今夕何夕, 见此良人</h1></span><br><br>
 <span class="say">我希望有个如你一般的人</span><br> <br>    
 <span class="say">如这山间清晨一般明亮清爽</span><br><br>
 <span class="say">如奔赴古城道路上阳光一般的人</span><br><br>
