--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
 <span class="say">由起点到夜晚, 由山野到书房, 一切问题的答案都很简单.</span><br><br>
 <span class="say">我希望有个如你一般的人, 贯彻未来, 数遍生命的公路牌.</span><br><br>
 <span class="say"><span class="space"></span> -- 刘员京--</span><br>
-<span class="say"><h1>生日快乐!</h1></span><br>
+<span class="say"><h1>七夕快乐!</h1></span><br>
         </font>
       </div>
                 </div>
                 <div id="clock-box">
-                    <!-- <span class="STYLE1"></span><font color="#33CC00">距离我喜欢你，</font>
-<span class="STYLE1">已经是……</span> -->
+                    <span class="STYLE1"></span><font color="#33CC00">距离我喜欢你，</font>
+<span class="STYLE1">已经是……</span>
 <span class="STYLE1"></span>
 <font color="#33CC00"></font>
 <span class="STYLE1"></span>
-                  <!-- <div id="clock"></div> -->
+                  <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
             </div>
