--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
                 </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#9370DB">距离我喜欢你，</font>
+                    <span class="STYLE1"></span><font color="#00BFFF">距离我喜欢你，</font>
 <span class="STYLE1">已经是……</span>
 <span class="STYLE1"></span>
 <font color="#33CC00"></font>
@@ -182,7 +182,7 @@
 
         var textAnimate = eval(Jscex.compile("async", function () {
         var together = new Date();
-        together.setFullYear(2009,10,23 );      //时间年月日
+        together.setFullYear(2021,3,16);      //时间年月日
         together.setHours(16);            //小时  
         together.setMinutes(53);          //分钟
         together.setSeconds(0);         //秒前一位
