--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <span class="say">温暖而不炙热，覆盖我所有肌肤</span><br><br>
 <span class="say">由起点到夜晚, 由山野到书房, 一切问题的答案都很简单.</span><br><br>
 <span class="say">我希望有个如你一般的人, 贯彻未来, 数遍生命的公路牌.</span><br><br>
-<span class="say"><span class="space"></span> -- 小鲸鱼 ❤ 小鱼儿 --</span><br>
+<span class="say"><span class="space"></span> -- 大鲸鱼 ❤ 小鱼儿 --</span><br>
 <!-- <span class="say"><h1>七夕快乐!</h1></span><br> -->
         </font>
       </div>
