--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "htt`://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>(*￣▽￣)小鱼儿七夕快乐呀~(≧︶≦*)</title>     
+    <title>(*￣▽￣)我们会成功的，情人节快乐~(≧︶≦*)</title>     
     <link type="text/css" rel="stylesheet" href="./css/default.css">
     <script type="text/javascript" src="./css/jquery.min.js"></script>
     <script type="text/javascript" src="./css/jscex.min.js"></script>
@@ -19,7 +19,7 @@
 </head>
     <body>
       <audio autoplay="autopaly">
-          <source src="music/love.mp3" type="audio/mp3" />
+          <source src="love.mp3" type="audio/mp3" />
       </audio>  
         <div id="main">
              <div id="wrap">
