--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
     <body>
       <audio autoplay="autopaly">
-          <source src="love.mp3" type="audio/mp3" />
+          <source src="./love.mp3" type="audio/mp3" />
       </audio>  
         <div id="main">
              <div id="wrap">
